# Cherry-Doom

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FEATURES.md  README.md  compile+install-script-for-linux.sh  config.h.in  zse00s-generic-auto-cmake-script.sh
.github/workflows/: main.yml  packages.yml  release.yml  update_wiki.yml  win_msvc.yml
Source/: CMakeLists.txt  cross.h  d_event.h  d_main.c  d_main.h  d_player.h  doomstat.c  doomstat.h  f_finale.c  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_stuff.c  hu_stuff.h  i_video.c  i_video.h  icon.c  info.c  m_cheat.c  m_input.h  m_menu.c  m_menu.h  m_misc.c  p_doors.c  p_enemy.c  p_inter.c  p_inter.h  p_map.c  p_mobj.c  p_mobj.h  p_pspr.c  p_saveg.c  p_setup.c  p_switch.c  p_tick.c  p_user.c  r_bsp.c  r_defs.h  r_main.c  (+12 more)
autoload/all-all/: woofhud.lmp
base/: CMakeLists.txt
base/all-all/: ng_palet.lmp  sbardef.lmp  sbhuddef.lmp  sbnugdef.lmp  woofhud.lmp
base/all-all/sprites/: RSMKA0.lmp  RSMKD0.lmp  rsmkb0.lmp  rsmkc0.lmp
base/extras.wad/: sbardef.lmp
base/id1.wad/: sbardef.lmp
cmake/: CherryDoomSettings.cmake  NuggetDoomSettings.cmake  WoofSettings.cmake
data/: CMakeLists.txt  cherry-doom-setup.desktop  cherry-doom.desktop  io.github.MrAlaux.Nugget-Doom.desktop  io.github.MrAlaux.Nugget-Doom.metainfo.in  io.github.MrAlaux.Nugget-Doom.metainfo.xml  io.github.xemonix0.Cherry-Doom-setup.desktop  io.github.xemonix0.Cherry-Doom.desktop  io.github.xemonix0.Cherry-Doom.metainfo.in  io.github.xemonix0.Cherry-Doom.metainfo.xml  nugget-doom-setup.desktop  nugget-doom.desktop  nuggetdoom.icns  woof.icns
docs/: CMakeLists.txt  cheats.md  mapcolors_vanilla.cfg  nughud.lmp  nughud.md  nughud.txt  woofhud.lmp  woofhud.md
man/: CMakeLists.txt  CherryDoomInstall.cmake.in  NuggetDoomInstall.cmake.in  cherry-doom.template  docgen  nugget-doom.template  setup.template
man/bash-completion/: .gitignore
miniz/: CMakeLists.txt
opl/: CMakeLists.txt
setup/: CMakeLists.txt  execute.c  setup_icon.c
spng/: CMakeLists.txt
src/: CMakeLists.txt  am_map.c  am_map.h  cross.h  d_deh.c  d_event.h  d_items.h  d_iwad.c  d_loop.c  d_loop.h  d_main.c  d_main.h  d_net.c  d_player.h  d_quit.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dsdhacked.c  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  font.h  g_game.c  g_game.h  g_input.c  g_input.h  g_nextweapon.c  hu_crosshair.c  hu_crosshair.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  i_3dsound.c  i_input.c  i_input.h  i_main.c  (+118 more)
textscreen/: CMakeLists.txt
toolsrc/: CMakeLists.txt
win32/: win_launcher.c
